Implemented direct module injection (by name) into modules and services. Modules cannot inject services, though (obviously).

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fs":"*",
     "passport": "*",
     "passport-google-oauth": "*",
+    "prototype": "*",
     "primus.io": "*",
     "redis":"*",
     "serve-favicon":"*",
