NPM modules can now be injected, as long as they are part of the client app's package.json (i.e. if they have been npm installed into the client app's directory)

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "serve-favicon":"*",
     "ws":"*"
   },
-  "devDependencies": {    
+  "devDependencies": {
+    "mocha": "*",
     "chai":"*",
     "chai-things":"*"
   }
