Added docco to Grunt build, added some extra comments. Will be improving commenting on an ongoing basis from now on.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt": "*",
     "grunt-contrib-jshint":"*",
     "grunt-contrib-watch" : "*",
-    "jshint-stylish": "*"
+    "jshint-stylish": "*",
+    "grunt-docco-multi":"*"
   }
 }
