Significant modifications to the way transactions are handled, to make them somewhat less magical and significantly easier to understand.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "method-override":"*",
     "multiparty":"*",
     "node-fs":"*",
+    "on-finished":"*",
     "passport": "*",
     "prototype": "*",
     "primus.io": "*",
