Added 'test' script definition to package.json, so that tests can be run with $ npm test by things such as travis-ci

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     {"name": "Sean McIntyre","email": "smcintyre@xverba.ca"}
   ],
   "main":"lib/ravel.js",
+  "scripts": {
+    "test":"grunt test-cli"
+  },
   "dependencies": {
     "async": "*",
     "body-parser":"*",
