Modified logging system to be backed by intel

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "*",
     "express-session": "*",
     "hiredis":"*",
+    "intel":"*",
     "method-override":"*",
     "multiparty":"*",
     "node-fs":"*",
@@ -38,6 +39,7 @@
     "chai":"*",
     "chai-things":"*",
     "grunt": "*",
+    "grunt-env": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-jshint":"*",
     "grunt-contrib-watch" : "*",
