Added tests for core/routes

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-mocha-test":"*",
     "grunt-blanket":"*",
     "grunt-open":"*",
-    "mockery":"*"
+    "mockery":"*",
+    "sinon":"*"
   }
 }
