--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "grunt-contrib-clean": "*",
     "grunt-contrib-jshint":"*",
     "grunt-contrib-watch" : "*",
-    "jshint-stylish": "*",
     "grunt-docco-multi":"*",
     "grunt-mocha-test":"*",
     "grunt-blanket":"*",
     "grunt-open":"*",
+    "load-grunt-tasks":"*",
     "mockery":"*",
+    "jshint-stylish": "*",
     "sinon":"*"
   }
 }
