Added tests for Ravel.Log. Refactored test output for all test suites.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "load-grunt-tasks":"*",
     "mockery":"*",
     "jshint-stylish": "*",
-    "sinon":"*"
+    "sinon":"*",
+    "sinon-chai":"*"
   }
 }
