- Removed ranged-get helper from util/rest for now since it doesn't work with Express 4 - Added tests for util/rest, and template authorization and database providers - Added stub test files for remaining modules, so that they show up in coverage report

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "grunt-open":"*",
     "load-grunt-tasks":"*",
     "mockery":"*",
+    "node-mocks-http":"*",
     "jshint-stylish": "*",
     "sinon":"*",
     "sinon-chai":"*"
