--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "main":"lib/ravel.js",
   "scripts": {
-    "test":"grunt test-cli"
+    "test":"grunt travis"
   },
   "dependencies": {
     "async": "*",
@@ -43,12 +43,14 @@
     "grunt-contrib-clean": "*",
     "grunt-contrib-jshint":"*",
     "grunt-contrib-watch" : "*",
+    "grunt-coveralls" : "*",
     "grunt-docco-multi":"*",
     "grunt-mocha-test":"*",
     "grunt-blanket":"*",
     "grunt-open":"*",
     "load-grunt-tasks":"*",
     "mockery":"*",
+    "mocha-lcov-reporter":"*",
     "node-mocks-http":"*",
     "jshint-stylish": "*",
     "sinon":"*",
