--- a/package.json
+++ b/package.json
@@ -12,48 +12,48 @@
     "test":"grunt travis"
   },
   "dependencies": {
-    "async": "*",
-    "body-parser":"*",
-    "compression":"*",
-    "connect-flash":"*",
-    "connect-redis":"*",
-    "cookie-parser":"*",
-    "csurf":"*",
-    "ejs": "*",
-    "express": "*",
-    "express-session": "*",
-    "hiredis":"*",
-    "intel":"*",
-    "method-override":"*",
-    "multiparty":"*",
-    "node-fs":"*",
-    "passport": "*",
-    "prototype": "*",
-    "primus.io": "*",
-    "redis":"*",
-    "serve-favicon":"*",
-    "ws":"*"
+    "async": "0.9.0",
+    "body-parser":"*1.12.0",
+    "compression":"1.4.1",
+    "connect-flash":"0.1.1",
+    "connect-redis":"2.2.0",
+    "cookie-parser":"1.3.4",
+    "csurf":"1.7.0",
+    "ejs": "2.2.4",
+    "express": "4.11.2",
+    "express-session": "1.10.3",
+    "hiredis":"0.2.0",
+    "intel":"1.0.0",
+    "method-override":"2.3.1",
+    "multiparty":"4.1.1",
+    "node-fs":"0.1.7",
+    "passport": "0.2.1",
+    "prototype": "0.0.5",
+    "primus.io": "3.1.2",
+    "redis":"0.12.1",
+    "serve-favicon":"2.2.0",
+    "ws":"0.7.1"
   },
   "devDependencies": {
-    "mocha": "*",
-    "chai":"*",
-    "chai-things":"*",
-    "grunt": "*",
-    "grunt-env": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-jshint":"*",
-    "grunt-contrib-watch" : "*",
-    "grunt-coveralls" : "*",
-    "grunt-docco-multi":"*",
-    "grunt-mocha-test":"*",
-    "grunt-blanket":"*",
-    "grunt-open":"*",
-    "load-grunt-tasks":"*",
-    "mockery":"*",
-    "mocha-lcov-reporter":"*",
-    "node-mocks-http":"*",
-    "jshint-stylish": "*",
-    "sinon":"*",
-    "sinon-chai":"*"
+    "chai":"2.0.0",
+    "chai-things":"0.2.0",
+    "grunt": "0.4.5",
+    "grunt-blanket":"0.0.8",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-jshint":"0.11.0",
+    "grunt-contrib-watch" : "0.6.1",
+    "grunt-coveralls" : "1.0.0",
+    "grunt-docco-multi":"0.0.2",
+    "grunt-env": "0.4.2",
+    "grunt-mocha-test":"0.12.7",
+    "grunt-open":"0.2.3",
+    "jshint-stylish": "1.0.0",
+    "load-grunt-tasks":"3.1.0",
+    "mocha": "2.1.0",
+    "mocha-lcov-reporter":"0.0.1",
+    "mockery":"1.4.0",
+    "node-mocks-http":"1.2.4",
+    "sinon":"1.12.2",
+    "sinon-chai":"2.7.0"
   }
 }
