--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "contributors": [
     {"name": "Sean McIntyre","email": "smcintyre@xverba.ca"}
   ],
+  "license":"MIT",
+  "repository" :{
+    "type" : "git",
+    "url" : "https://github.com/Ghnuberath/ravel.git"
+  },
   "main":"lib/ravel.js",
   "scripts": {
     "test":"grunt travis"
@@ -52,6 +57,7 @@
     "mocha-lcov-reporter":"0.0.1",
     "mockery":"1.4.0",
     "node-mocks-http":"1.2.4",
+    "redis-mock":"0.4.4",
     "sinon":"1.12.2",
     "sinon-chai":"2.7.0"
   }
