--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "main":"lib/ravel.js",
   "scripts": {
-    "test":"grunt travis"
+    "test":"grunt travis",
+    "debug":"grunt debug test-debug"
   },
   "dependencies": {
     "async": "0.9.0",
@@ -55,6 +56,7 @@
     "mocha": "2.1.0",
     "mocha-lcov-reporter":"0.0.1",
     "mockery":"1.4.0",
+    "node-inspector":"0.9.1",
     "node-mocks-http":"1.2.4",
     "redis-mock":"0.4.4",
     "sinon":"1.12.2",
