--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-redis":"2.3.0",
     "cookie-parser":"1.3.4",
     "csurf":"1.8.0",
+    "extend":"2.0.1",
     "express": "4.12.3",
     "express-session": "1.11.1",
     "hiredis":"0.2.0",
