--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ravel",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "author": "Sean McIntyre <smcintyre@xverba.ca>",
   "description": "Ravel Rapid Application Development Framework",
   "contributors": [
@@ -26,13 +26,13 @@
     "extend":"2.0.1",
     "express": "4.12.3",
     "express-session": "1.11.1",
+    "fs-readdir-recursive":"0.1.2",
     "hiredis":"0.4.0",
     "intel":"1.0.0",
     "node-fs":"0.1.7",
     "passport": "0.2.1",
     "prototype": "0.0.5",
     "primus.io": "3.1.2",
-    "recursive-readdir":"1.2.1",
     "redis":"0.12.1",
     "serve-favicon":"2.2.0",
     "engine.io":"1.5.1"
