--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ravel",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "author": "Sean McIntyre <smcintyre@xverba.ca>",
   "description": "Ravel Rapid Application Development Framework",
   "contributors": [
@@ -14,7 +14,7 @@
   "main":"lib/ravel.js",
   "scripts": {
     "test":"grunt travis",
-    "debug":"node-debug $(which grunt) test-cli"
+    "debug":"node-debug $(which grunt) test-debug"
   },
   "dependencies": {
     "async": "0.9.0",
@@ -43,6 +43,7 @@
     "chai-as-promised":"5.0.0",
     "grunt": "0.4.5",
     "grunt-blanket":"0.0.8",
+    "grunt-contrib-copy": "0.6.0",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-jshint":"0.11.2",
     "grunt-contrib-watch" : "0.6.1",
