--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "primus.io": "3.1.2",
     "redis":"0.12.1",
     "serve-favicon":"2.2.0",
-    "engine.io":"1.5.1"
+    "engine.io":"1.5.1",
+    "upath": "^0.1.5"
   },
   "devDependencies": {
     "chai":"2.3.0",
