Replacing Grunt with Gulp. Starting new Ravel es2015/2016 implementation.

--- a/.jshintrc
+++ b/.jshintrc
@@ -15,11 +15,11 @@
   "boss":      true,
   "eqnull":    true,
   "node":      true,
-  "jquery":    true,
   "quotmark": "single",
   "camelcase": true,
   "strict":    true,
   "indent":    2,
+  "esnext":    true,
   "globals": {
     "require":    false,
     "module":     false
