Updated core/resource and core/resources. Removed var usage throughout codebase.

--- a/.jshintrc
+++ b/.jshintrc
@@ -20,6 +20,7 @@
   "strict":    true,
   "indent":    2,
   "esnext":    true,
+  "varstmt":   true,
   "globals": {
     "require":    false,
     "module":     false
