--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
     "gulp-jshint": "2.0.0",
     "gulp-load-plugins": "1.2.0",
     "gulp-mocha": "2.2.0",
-    "gulp-open": "1.0.0"
+    "gulp-open": "1.0.0",
+
+    "babel":"6.3.26",
+    "babel-register": "6.4.3",
+    "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
 }
