--- a/lib/.eslintrc
+++ b/lib/.eslintrc
@@ -1,11 +1,13 @@
 {
-  "extends": "../.jshintrc",
-  "maxlen":    120,
+  "extends": "../.eslintrc",
   "globals": {
     "Ravel":       true,
     "Primus":      true,
     "constructor": false,
     "require":     false,
     "module":      false
+  },
+  "rules": {
+    "max-len":  [2, 120, 2]
   }
 }
