--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "sinon":"1.14.1",
     "sinon-chai":"2.7.0",
     "supertest":"0.15.0",
-    "jshint": "2.9.1",
-    "jshint-stylish": "1.0.1",
+    "eslint": "1.10.3",
 
     "del": "2.2.0",
     "gulp": "3.9.0",
@@ -62,12 +61,13 @@
     "istanbul": "0.4.2",
     "isparta": "4.0.0",
     "gulp-istanbul": "0.10.3",
-    "gulp-jshint": "2.0.0",
+    "gulp-eslint": "1.1.1",
     "gulp-load-plugins": "1.2.0",
     "gulp-mocha": "2.2.0",
     "gulp-open": "1.0.0",
 
     "babel":"6.3.26",
+    "babel-eslint": "5.0.0-beta6",
     "babel-register": "6.4.3",
     "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
