--- a/lib/.eslintrc.json
+++ b/lib/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../.eslintrc",
+  "extends": "../.eslintrc.json",
   "globals": {
     "Ravel":       true,
     "Primus":      true,
