--- a/package.json
+++ b/package.json
@@ -17,25 +17,21 @@
     "debug":"node-debug $(which gulp) test-no-cov"
   },
   "dependencies": {
-    "async": "0.9.0",
-    "body-parser":"*1.12.3",
-    "compression":"1.4.3",
-    "connect-flash":"0.1.1",
-    "connect-redis":"2.3.0",
-    "cookie-parser":"1.3.4",
-    "extend":"2.0.1",
-    "express": "4.12.3",
-    "express-session": "1.11.1",
-    "fs-readdir-recursive":"0.1.2",
+    "async": "1.5.2",
+    "fs-readdir-recursive":"1.0.0",
     "harmonize": "1.4.4",
     "hiredis":"0.4.1",
-    "intel":"1.0.0",
+    "intel":"1.1.0",
+    "koa": "1.1.2",
+    "koa-compressor": "1.0.3",
+    "koa-generic-session": "1.10.1",
+    "koa-redis": "2.0.1",
+    "koa-router": "5.3.0",
+    "koa-static": "2.0.0",
+    "koa-views": "4.0.1",
     "node-fs":"0.1.7",
-    "passport": "0.2.1",
-    "primus.io": "3.1.2",
+    "passport": "0.3.2",
     "redis":"2.4.2",
-    "serve-favicon":"2.2.0",
-    "engine.io":"1.5.1",
     "upath": "0.1.6"
   },
   "devDependencies": {
