--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "debug":"node-debug $(which gulp) test-no-cov"
   },
   "dependencies": {
-    "async": "1.5.2",
+    "co":"4.6.0",
     "fs-readdir-recursive":"1.0.0",
     "harmonize": "1.4.4",
     "hiredis":"0.4.1",
@@ -50,6 +50,7 @@
     "eslint": "1.10.3",
 
     "del": "2.2.0",
+    "generator-bind": "1.0.1",
     "gulp": "3.9.0",
     "gulp-coveralls": "0.1.4",
     "gulp-docco": "0.0.4",
@@ -63,7 +64,7 @@
     "gulp-open": "1.0.0",
 
     "babel":"6.3.26",
-    "babel-eslint": "5.0.0-beta6",
+    "babel-eslint": "5.0.0-beta10",
     "babel-register": "6.4.3",
     "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
