--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "co":"4.6.0",
+    "composition":"2.2.1",
     "fs-readdir-recursive":"1.0.0",
     "harmonize": "1.4.4",
     "hiredis":"0.4.1",
@@ -50,7 +51,6 @@
     "eslint": "1.10.3",
 
     "del": "2.2.0",
-    "generator-bind": "1.0.1",
     "gulp": "3.9.0",
     "gulp-coveralls": "0.1.4",
     "gulp-docco": "0.0.4",
