--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa": "1.1.2",
     "koa-compressor": "1.0.3",
     "koa-generic-session": "1.10.1",
+    "koa-passport": "1.2.0",
     "koa-redis": "2.0.1",
     "koa-router": "5.3.0",
     "koa-static": "2.0.0",
