--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "co":"4.6.0",
     "composition":"2.2.1",
     "fs-readdir-recursive":"1.0.0",
-    "harmonize": "1.4.4",
     "hiredis":"0.4.1",
     "intel":"1.1.0",
     "koa": "1.1.2",
@@ -66,9 +65,10 @@
     "gulp-mocha": "2.2.0",
     "gulp-open": "1.0.0",
 
+    "harmonize": "1.4.4",
     "babel":"6.3.26",
     "babel-eslint": "5.0.0-beta10",
-    "babel-register": "6.4.3",
-    "babel-plugin-transform-decorators-legacy": "1.3.4"
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-register": "6.4.3"
   }
 }
