--- a/package.json
+++ b/package.json
@@ -69,9 +69,10 @@
     "gulp-open": "1.0.0",
 
     "harmonize": "1.4.4",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-babel":"6.1.2",
     "babel":"6.3.26",
     "babel-eslint": "5.0.0-beta10",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-register": "6.4.3"
+    "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
 }
