Creating metadata system for Ravel which will ultimately support clients reflecting on core components. Updating @before to use it.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "main":"lib/ravel.js",
   "scripts": {
+    "clean": "node --harmony_rest_parameters $(which gulp) clean",
     "docs":"mr-doc -n ravel -s lib",
     "test":"node --harmony_rest_parameters $(which gulp) test",
     "test-no-cov":"node --harmony_rest_parameters $(which gulp) test-no-cov",
