--- a/package.json
+++ b/package.json
@@ -56,39 +56,39 @@
   },
   "devDependencies": {
     "async":"1.5.2",
-    "chai":"2.3.0",
+    "chai":"3.5.0",
+    "chai-as-promised":"5.3.0",
     "chai-things":"0.2.0",
-    "chai-as-promised":"5.0.0",
-    "mocha": "2.3.4",
-    "mocha-lcov-reporter":"0.0.2",
-    "mockery":"1.4.0",
-    "mr-doc":"3.1.5",
+    "mocha": "2.4.5",
+    "mocha-lcov-reporter":"1.2.0",
+    "mockery":"1.6.2",
+    "mr-doc":"3.2.1",
     "mr-doc-theme-default":"1.4.0",
-    "node-inspector":"0.12.5",
-    "node-mocks-http":"1.4.2",
-    "redis-mock":"0.4.8",
-    "sinon":"1.14.1",
-    "sinon-chai":"2.7.0",
-    "supertest":"0.15.0",
+    "node-inspector":"0.12.8",
+    "node-mocks-http":"1.5.2",
+    "redis-mock":"0.5.2",
+    "sinon":"1.17.3",
+    "sinon-chai":"2.8.0",
+    "supertest":"1.2.0",
     "eslint": "1.10.3",
 
     "codeclimate-test-reporter": "0.3.1",
     "del": "2.2.0",
-    "gulp": "3.9.0",
+    "gulp": "3.9.1",
     "gulp-env": "0.4.0",
-    "istanbul": "0.4.2",
+    "istanbul": "0.4.3",
     "isparta": "4.0.0",
-    "gulp-istanbul": "0.10.3",
-    "gulp-eslint": "1.1.1",
-    "gulp-load-plugins": "1.2.0",
+    "gulp-istanbul": "0.10.4",
+    "gulp-eslint": "2.0.0",
+    "gulp-load-plugins": "1.2.2",
     "gulp-mocha": "2.2.0",
-    "gulp-open": "1.0.0",
+    "gulp-open": "2.0.0",
 
     "harmonize": "1.4.4",
     "gulp-sourcemaps": "1.6.0",
     "gulp-babel":"6.1.2",
-    "babel":"6.3.26",
-    "babel-eslint": "5.0.0-beta10",
+    "babel":"6.5.2",
+    "babel-eslint": "5.0.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
 }
