--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   "dependencies": {
     "co":"4.6.0",
     "fs-readdir-recursive":"1.0.0",
-    "hiredis":"0.4.1",
     "intel":"1.1.0",
     "koa": "1.2.0",
     "koa-compress": "1.0.9",
@@ -58,6 +57,9 @@
     "rc": "1.1.6",
     "redis":"2.5.3",
     "upath": "0.1.7"
+  },
+  "optionalDependencies": {
+    "hiredis":"0.4.1"
   },
   "devDependencies": {
     "async":"1.5.2",
