--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 sudo: false
+env:
+  - CXX=g++-4.8
 addons:
   apt:
     sources:
@@ -11,7 +13,6 @@ addons:
 node_js:
   - "6.2.1"
 before_install:
-  - if [[ $TRAVIS_OS_NAME == "linux" ]]; then export CXX=g++-4.8; fi
   - $CXX --version
   - npm install
 after_script:
