--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ravel",
-  "version": "0.17.2",
+  "version": "0.17.3",
   "author": "Sean McIntyre <s.mcintyre@xverba.ca>",
   "description": "Ravel Rapid Application Development Framework",
   "engines": {
@@ -59,7 +59,7 @@
     "upath": "0.1.7"
   },
   "optionalDependencies": {
-    "hiredis":"0.4.1"
+    "hiredis":">=0.5.0"
   },
   "devDependencies": {
     "async":"1.5.2",
