--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ravel",
-  "version": "0.17.8",
+  "version": "0.17.9",
   "author": "Sean McIntyre <s.mcintyre@xverba.ca>",
   "description": "Ravel Rapid Application Development Framework",
   "engines": {
@@ -88,8 +88,8 @@
 
     "gulp-sourcemaps": "1.6.0",
     "gulp-babel":"6.1.2",
-    "babel":"6.5.2",
-    "babel-eslint": "6.0.4",
+    "babel-core":"6.13.2",
+    "babel-eslint": "6.1.2",
     "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
 }
