--- a/package.json
+++ b/package.json
@@ -87,9 +87,8 @@
     "gulp-open": "2.0.0",
 
     "gulp-sourcemaps": "1.6.0",
-    "gulp-babel":"6.1.2",
-    "babel-core":"6.14.0",
-    "babel-eslint": "6.1.2",
-    "babel-plugin-transform-decorators-legacy": "1.3.4"
+    "gulp-typescript": "2.13.6",
+    "typescript": "1.8.10",
+    "typescript-eslint-parser": "0.1.3"
   }
 }
