--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "clean": "gulp clean",
     "docs":"gulp docs",
     "watch":"gulp watch",
-    "test":"gulp test",
-    "test-no-cov":"gulp test-no-cov",
+    "test":"gulp --require source-map-support/register test",
+    "test-no-cov":"gulp --require source-map-support/register test-no-cov",
     "show-coverage":"gulp show-coverage",
-    "debug":"node debug $(which gulp) test-no-cov",
-    "debug-remote":"node --debug-brk=5858 $(which gulp) test-no-cov"
+    "debug":"node debug $(which gulp) --require source-map-support/register test-no-cov",
+    "debug-remote":"node --debug-brk=5858 $(which gulp) --require source-map-support/register test-no-cov"
   },
   "dependencies": {
     "co":"4.6.0",
@@ -89,6 +89,7 @@
     "gulp-sourcemaps": "1.6.0",
     "gulp-typescript": "2.13.6",
     "typescript": "1.8.10",
+    "source-map-support": "0.4.2",
     "typescript-eslint-parser": "0.1.3"
   }
 }
