--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ravel",
-  "version": "0.17.18",
+  "version": "0.17.19",
   "author": "Sean McIntyre <s.mcintyre@xverba.ca>",
   "description": "Ravel Rapid Application Development Framework",
   "engines": {
@@ -89,6 +89,7 @@
     "gulp-typescript": "3.1.3",
     "typescript": "2.0.10",
     "source-map-support": "0.4.6",
-    "typescript-eslint-parser": "1.0.0"
+    "typescript-eslint-parser": "1.0.0",
+    "eslint-plugin-typescript": "0.1.0"
   }
 }
