--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "upath": "0.2.0"
   },
   "devDependencies": {
-    "async":"2.1.2",
+    "async":"2.1.4",
     "chai":"3.5.0",
     "chai-as-promised":"6.0.0",
     "chai-things":"0.2.0",
@@ -72,7 +72,7 @@
     "sinon":"1.17.6",
     "sinon-chai":"2.8.0",
     "supertest":"2.0.1",
-    "eslint": "3.10.2",
+    "eslint": "3.11.0",
 
     "codeclimate-test-reporter": "0.4.0",
     "del": "2.2.2",
@@ -86,10 +86,11 @@
     "gulp-open": "2.0.0",
 
     "gulp-sourcemaps": "1.9.1",
-    "gulp-typescript": "3.1.3",
-    "typescript": "2.0.10",
     "source-map-support": "0.4.6",
-    "typescript-eslint-parser": "1.0.0",
-    "eslint-plugin-typescript": "0.1.0"
+    "gulp-babel":"6.1.2",
+    "babel-core":"6.18.2",
+    "babel-eslint": "7.1.1",
+    "babel-plugin-transform-async-to-generator": "6.16.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
 }
