Modified codebase for async/await. Seems as though koa-router is causing a problem though. Tests do not pass.

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "plugins": ["transform-decorators-legacy", "transform-async-to-generator"],
+  "plugins": ["transform-decorators-legacy"],
   "only": [
     "test/**/*.js"
   ],
