--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ravel",
-  "version": "0.17.20",
+  "version": "0.18.0",
   "author": "Sean McIntyre <s.mcintyre@xverba.ca>",
   "description": "Ravel Rapid Application Development Framework",
   "engines": {
@@ -33,23 +33,22 @@
     "clean": "gulp clean",
     "docs":"gulp docs",
     "watch":"gulp watch",
-    "test":"gulp --require source-map-support/register test",
-    "test-no-cov":"gulp --require source-map-support/register test-no-cov",
+    "test":"node --harmony_async_await $(which gulp) --require source-map-support/register test",
+    "test-no-cov":"node --harmony_async_await $(which gulp) --require source-map-support/register test-no-cov",
     "show-coverage":"gulp show-coverage",
-    "debug":"node debug $(which gulp) --require source-map-support/register test-no-cov",
-    "debug-remote":"node --debug-brk=5858 $(which gulp) --require source-map-support/register test-no-cov"
+    "debug":"node  --harmony_async_await debug $(which gulp) --require source-map-support/register test-no-cov",
+    "debug-remote":"node  --harmony_async_await --debug-brk=5858 $(which gulp) --require source-map-support/register test-no-cov"
   },
   "dependencies": {
-    "co":"4.6.0",
     "fs-readdir-recursive":"1.0.0",
     "intel":"1.1.1",
-    "koa": "1.2.4",
-    "koa-compress": "1.0.9",
-    "koa-compose":"2.5.1",
-    "koa-favicon": "1.2.1",
+    "koa": "2.0.0-alpha.7",
+    "koa-compress": "2.0.0",
+    "koa-convert": "1.2.0",
+    "koa-favicon": "2.0.0",
     "koa-generic-session": "1.11.3",
-    "koa-passport": "1.3.1",
-    "koa-router": "5.4.0",
+    "koa-passport": "2.2.2",
+    "koa-router": "7.0.1",
     "koa-static": "2.0.0",
     "koa-views": "5.2.0",
     "node-fs":"0.1.7",
@@ -71,8 +70,8 @@
     "redis-mock":"0.16.0",
     "sinon":"1.17.6",
     "sinon-chai":"2.8.0",
-    "supertest":"2.0.1",
     "eslint": "3.11.0",
+    "supertest":"2.0.1",
 
     "codeclimate-test-reporter": "0.4.0",
     "del": "2.2.2",
@@ -90,7 +89,6 @@
     "gulp-babel":"6.1.2",
     "babel-core":"6.18.2",
     "babel-eslint": "7.1.1",
-    "babel-plugin-transform-async-to-generator": "6.16.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4"
   }
 }
