--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
     "sinon":"1.17.6",
     "sinon-chai":"2.8.0",
     "eslint": "3.11.0",
+    "eslint-config-standard": "6.2.1",
+    "eslint-plugin-standard": "2.0.1",
+    "eslint-plugin-promise": "3.4.0",
     "supertest":"2.0.1",
 
     "codeclimate-test-reporter": "0.4.0",
