--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "docs":"gulp docs",
     "watch":"gulp watch",
     "test":"node $(which gulp) --require source-map-support/register test",
+    "test-windows":"node node_modules/gulp/bin/gulp.js --require source-map-support/register test",
     "test-no-cov":"node --harmony_async_await $(which gulp) --require source-map-support/register test-no-cov",
     "show-coverage":"gulp show-coverage",
     "debug":"node --harmony_async_await --nolazy --debug-brk --inspect $(which gulp) --require source-map-support/register test-no-cov",
