Adding and fixing all issues presented by eslint-plugin-jsdoc

--- a/lib/.eslintrc.json
+++ b/lib/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": "../.eslintrc.json",
+  "plugins": ["jsdoc"],
   "globals": {
     "Ravel":       true,
     "Primus":      true,
@@ -8,6 +9,17 @@
     "module":      false
   },
   "rules": {
-    "max-len":  [2, 120, 2]
+    "max-len":  [2, 120, 2],
+    "jsdoc/check-param-names": 1,
+    "jsdoc/check-tag-names": 1,
+    "jsdoc/check-types": 1,
+    "jsdoc/newline-after-description": 1,
+    "jsdoc/require-description-complete-sentence": 1,
+    "jsdoc/require-hyphen-before-param-description": 1,
+    "jsdoc/require-param": 1,
+    "jsdoc/require-param-description": 1,
+    "jsdoc/require-param-type": 1,
+    "jsdoc/require-returns-description": 1,
+    "jsdoc/require-returns-type": 1
   }
 }
