--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-config-semistandard": "7.0.0",
     "eslint-plugin-standard": "2.0.1",
     "eslint-plugin-promise": "3.4.0",
+    "eslint-plugin-jsdoc": "3.0.0",
     "supertest":"2.0.1",
 
     "codeclimate-test-reporter": "0.4.0",
