Adding documentation version select drop-down

--- a/documentation.yml
+++ b/documentation.yml
@@ -1,5 +1,26 @@
-name: Ravel 0.18.3
+name: Ravel API
 version: 0.18.3
+versions:
+  - 0.18.3
+  - 0.18.2
+  - 0.18.1
+  - 0.18.0
+  - 0.17.9
+  - 0.17.8
+  - 0.17.7
+  - 0.17.5
+  - 0.17.4
+  - 0.17.3
+  - 0.17.2
+  - 0.17.18
+  - 0.17.17
+  - 0.17.13
+  - 0.17.12
+  - 0.17.11
+  - 0.17.10
+  - 0.17.1
+  - 0.17.0
+  - 0.16.0
 toc:
   - name: Core Application Components
   - Ravel
