--- a/package.json
+++ b/package.json
@@ -42,42 +42,44 @@
   },
   "dependencies": {
     "fs-readdir-recursive":"1.0.0",
-    "intel":"1.1.1",
-    "koa": "2.0.0-alpha.7",
+    "intel":"1.1.2",
+    "koa": "2.2.0",
     "koa-compress": "2.0.0",
     "koa-convert": "1.2.0",
     "koa-favicon": "2.0.0",
-    "koa-generic-session": "1.11.4",
+    "koa-generic-session": "1.11.5",
     "koa-passport": "2.2.2",
-    "koa-router": "7.0.1",
-    "koa-static": "2.0.0",
-    "koa-views": "5.2.0",
+    "koa-router": "7.1.1",
+    "koa-static": "3.0.0",
+    "koa-views": "6.0.2",
     "node-fs":"0.1.7",
     "passport": "0.3.2",
     "path-to-regexp": "1.7.0",
-    "redis":"2.6.3",
-    "upath": "0.2.0"
+    "redis":"2.7.1",
+    "upath": "1.0.0"
   },
   "devDependencies": {
-    "async":"2.1.4",
+    "async":"2.4.0",
     "chai":"3.5.0",
     "chai-as-promised":"6.0.0",
     "chai-things":"0.2.0",
-    "documentation": "4.0.0-beta.18",
+    "documentation": "4.0.0-rc.0",
     "yamljs":  "0.2.8",
-    "mocha": "3.1.2",
-    "mocha-lcov-reporter":"1.2.0",
+    "mocha": "3.3.0",
+    "mocha-lcov-reporter":"1.3.0",
     "mockery":"2.0.0",
-    "node-mocks-http":"1.5.4",
+    "node-mocks-http":"1.6.1",
     "redis-mock":"0.16.0",
     "sinon":"1.17.6",
     "sinon-chai":"2.8.0",
-    "eslint": "3.11.0",
-    "eslint-config-standard": "6.2.1",
-    "eslint-config-semistandard": "7.0.0",
-    "eslint-plugin-standard": "2.0.1",
-    "eslint-plugin-promise": "3.4.0",
-    "eslint-plugin-jsdoc": "3.0.0",
+    "eslint": "3.19.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-config-semistandard": "11.0.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-node": "4.2.2",
+    "eslint-plugin-standard": "3.0.1",
+    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-jsdoc": "3.0.2",
     "supertest":"2.0.1",
 
     "codeclimate-test-reporter": "0.4.0",
