--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
           "stopOnEntry": true,
           "port": 9229,
           "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
-          "runtimeArgs": ["--inspect", "--harmony_async_await", "--nolazy"],
+          "runtimeArgs": ["--inspect", "--nolazy"],
           "args": ["test-no-cov"],
           "smartStep": true
           // ,"sourceMaps": true,
@@ -32,7 +32,7 @@
           "stopOnEntry": true,
           "port": 5858,
           "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
-          "runtimeArgs": ["--debug", "--harmony_async_await", "--nolazy"],
+          "runtimeArgs": ["--debug", "--nolazy"],
           "args": ["test-no-cov"],
           "smartStep": true,
           "sourceMaps": true
