--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "eslint-plugin-jsdoc": "3.0.2",
     "supertest": "3.0.0",
     "passport-local": "1.0.0",
-    "koa-better-body": "3.0.2",
+    "koa-bodyparser": "4.2.0",
     "codeclimate-test-reporter": "0.4.1",
     "del": "2.2.2",
     "gulp": "3.9.1",
@@ -105,5 +105,6 @@
     "babel-eslint": "7.2.3",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4"
-  }
+  },
+  "false": {}
 }
