--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
     "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4"
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-register": "6.24.1"
   },
   "false": {}
 }
