--- a/package.json
+++ b/package.json
@@ -49,9 +49,8 @@
     "intel": "1.2.0",
     "koa": "2.3.0",
     "koa-compress": "2.0.0",
-    "koa-convert": "1.2.0",
     "koa-favicon": "2.0.0",
-    "koa-generic-session": "1.11.6",
+    "koa-session": "5.5.0",
     "koa-passport": "3.0.0",
     "koa-router": "7.2.1",
     "koa-static": "4.0.1",
