--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "supertest": "3.0.0",
     "passport-local": "1.0.0",
     "koa-bodyparser": "4.2.0",
+    "lodash": "4.17.5",
     "nyc": "11.2.1",
     "codeclimate-test-reporter": "0.5.0",
     "del": "3.0.0",
