Fixing vscode test debugging

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,9 @@
   "env": {
     "test": {
       "plugins": ["transform-decorators-legacy", "istanbul"]
+    },
+    "test-no-cov": {
+      "plugins": ["transform-decorators-legacy"]
     }
   },
   "ignore": [
