--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
           "console": "integratedTerminal",
           "internalConsoleOptions": "neverOpen",
           "env": {
-            "NODE_ENV": "test"
+            "NODE_ENV": "test-no-cov"
           },
           "smartStep": true
         },
@@ -26,7 +26,7 @@
           "console": "integratedTerminal",
           "internalConsoleOptions": "neverOpen",
           "env": {
-            "NODE_ENV": "test"
+            "NODE_ENV": "test-no-cov"
           },
           "smartStep": true
         }
