--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
           "type": "node2",
           "request": "launch",
           "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
-          "args": ["--coverage"],
+          "args": ["--runInBand", "--coverage"],
           "console": "integratedTerminal",
           "internalConsoleOptions": "neverOpen",
           "env": {
@@ -23,7 +23,7 @@
           "type": "node2",
           "request": "launch",
           "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
-          "args": ["-i", "${file}"],
+          "args": ["--runInBand", "-i", "${file}"],
           "console": "integratedTerminal",
           "internalConsoleOptions": "neverOpen",
           "env": {
