--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
           "type": "node2",
           "request": "launch",
           "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
-          "args": ["--runInBand", "--coverage"],
+          "args": ["--runInBand"],
           "console": "integratedTerminal",
           "internalConsoleOptions": "neverOpen",
           "env": {
