Finishing porting routes tests

--- a/package.json
+++ b/package.json
@@ -63,10 +63,10 @@
     "clean": "gulp clean",
     "docs": "gulp docs",
     "watch": "gulp watch",
-    "test": "cross-env NODE_ENV=test npm run lint && npm run lint:test && npm run jest",
+    "test": "cross-env NODE_ENV=test npm run lint && npm run lint:jest && npm run jest",
     "test-windows": "npm test",
     "lint": "eslint ./lib",
-    "lint:test": "eslint ./test",
+    "lint:jest": "eslint ./jest",
     "jest": "cross-env NODE_ENV=test jest --coverage --silent",
     "show-coverage": "gulp show-coverage",
     "dist": "gulp dist",
