Adding testing docs

--- a/documentation.yml
+++ b/documentation.yml
@@ -67,6 +67,6 @@ toc:
     description: |
       Built-in error types are automatically translated into standard HTTP response status codes when thrown.
   - ApplicationError
-  - name: Testing Ravel Apps
+  - name: Testing Ravel Applications
     file: docs/testing.md
   - name: Other Stuff
