Fixing unhandledRejection test

--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "watch": "gulp watch",
     "test": "cross-env NODE_ENV=test npm run lint && npm run lint:jest && npm run jest",
     "test-windows": "npm test",
-    "lint": "eslint ./lib",
+    "lint": "npm run lint:lib && npm run lint:jest",
+    "lint:lib": "eslint ./lib",
     "lint:jest": "eslint ./jest",
     "jest": "cross-env NODE_ENV=test jest --coverage --silent",
     "show-coverage": "gulp show-coverage",
