--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "setupFiles": [
       "./jest/setup.js"
     ],
+    "setupTestFrameworkScriptFile": "./jest/timeout.js",
     "moduleFileExtensions": [
       "js"
     ],
