--- a/package.json
+++ b/package.json
@@ -73,11 +73,13 @@
     "docs": "gulp docs",
     "watch": "gulp watch",
     "test": "cross-env NODE_ENV=test npm run lint && npm run jest",
-    "test-windows": "npm test",
+    "test-no-cov": "cross-env NODE_ENV=test npm run lint && npm run jest-no-cov",
+    "test-windows": "npm test-no-cov",
     "lint": "npm run lint:lib && npm run lint:jest",
     "lint:lib": "eslint ./lib",
     "lint:jest": "eslint ./jest",
     "jest": "cross-env NODE_ENV=test jest --coverage --silent",
+    "jest-no-cov": "cross-env NODE_ENV=test jest --silent",
     "show-coverage": "gulp show-coverage",
     "dist": "gulp dist",
     "prepare": "gulp dist"
